--- a/package.json
+++ b/package.json
@@ -13,19 +13,29 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.2.1",
+    "@mui/icons-material": "^6.3.0",
+    "@mui/material": "^6.3.0",
+    "@mui/x-date-pickers": "^7.23.3",
     "@types/node": "22.5.5",
     "@types/react": "18.3.8",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
+    "axios": "^1.7.9",
     "concurrently": "^9.0.1",
+    "date-fns": "2.26.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "next": "^14.2.13",
+    "leaflet": "^1.9.4",
+    "next": "^15.1.3",
     "postcss": "^8.4.47",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
+    "react-vega": "^7.6.0",
     "tailwindcss": "3.4.12",
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "vega": "^5.30.0",
+    "vega-lite": "^5.23.0",
+    "vega-lite-api": "^5.6.0"
   }
 }
